@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-20T16:33:47Z",
-  "count_outdated" : 682,
-  "uniques_outdated" : 354,
-  "count" : 705,
+  "timestamp" : "2022-07-21T02:17:55Z",
+  "count_outdated" : 684,
+  "uniques_outdated" : 355,
+  "count" : 706,
   "uniques" : 368,
   "clones" : [
-    {
-      "timestamp": "2022-07-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-07T00:00:00Z",
       "count": 1,
