@@ -1,12 +1,7 @@
 {
-  "count": 23,
+  "count": 22,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2022-07-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-07T00:00:00Z",
       "count": 1,
